--- a/app/views/recipes/new.html.erb
+++ b/app/views/recipes/new.html.erb
@@ -10,7 +10,7 @@
                 <span class="invalid-feedback"><%= message %></span>
             <% end %>
         </div>
-    </div>
+    </div> 
 
     <div class="form-group row"> 
         <div class ="col-auto">  
@@ -117,6 +117,6 @@
     </div> 
 
 
-    <p><%= form.submit "Add a New Recipe", class: "btn btn-primary" %>
+    <p><%= form.submit "Or add a New Recipe", class: "btn btn-primary" %>
 <% end %>
 </ul>
