--- a/app/views/recipes/index.html.erb
+++ b/app/views/recipes/index.html.erb
@@ -1,19 +1,37 @@
-<p>
-<p>
-<h1 class = "text-center " >All Recipes</h1>
-<p>
-<ul>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<h1 class = "text-center">Search Recipes By Ingredients</h1>
+<div class="text-center"> 
+<%= form_tag(recipes_path, method: "get") do %>
+  <%= label_tag(:q, "Ingredient Name:") %>
+  <%= text_field_tag(:search) %>
+  <%= submit_tag("Search") %>
+<% end %>
 
+<%if @recipes %>
+<ul>
   <% @recipes.each do |recipe| %>
     <h4 class = "text-center"><%= link_to "#{recipe.name}", recipe_path(recipe)%></h4>
     <p class = "text-center "> <%= recipe.likes%> Liked! </p>
     <p class = "text-center "><small>Ingredients: 
     <% recipe.ingredients.each do | ingredient |%>
-      <%= link_to "#{ingredient.name}", ingredient_path(ingredient)%>,
+      <%= link_to "#{ingredient.name}", ingredient_path(ingredient)%>
     <% end %></small></p>
   <% end %>
-
 </ul>
+<% end %>
+
+<% if @message %>
+ <p><%= @message%></p>
+<% end %>
+
+
+
+
 
 
 
