--- a/app/views/cook_books/show.html.erb
+++ b/app/views/cook_books/show.html.erb
@@ -1,10 +1,13 @@
+
+
+<body>
 <h1 class="text-left" style = "margin-left:160px"><%= @cook_book.name %></h1>
 <p class="text-center"><%= link_to "Back to My Kitchen", user_path(@user)%>
 <br>
 
 <h4 class = "text-light" style = "margin-left:160px">What would you like to eat today?</h4>
 <% @cook_book.recipes.each do |recipe| %>
-  <p><ol style = "margin-left:120px"><h5 class = "text-light"><%= link_to recipe.name, recipe_path(recipe) %> </h5>
+  <p><ol style = "margin-left:120px"><h5 class = "text-primary"><%= link_to recipe.name, recipe_path(recipe) %> </h5>
   </ol>
 <% end %>
 
@@ -23,3 +26,4 @@
   </tr> 
 </tr>
 </table>
+</body>
